@@ -1,5 +1,3 @@
-* BUG#6841 Déplacement du menu ZipCode au niveau de la configuration des tiers .
-
 Version 1.12 - 2017-04-28
 
 Version 1.10 - 2016-11-02
@@ -13,4 +11,4 @@ Version 1.4 - 2015-05-29
 Version 1.3 - 2015-01-22
 
 Version 1.2 - 2014-07-01
-* FEA#0000 Changelog file creation
+* Changelog file creation
