@@ -17,6 +17,5 @@ this repository contains the full copyright notices and license terms. -->
             <field name="view" ref="country.zip_view_form"/>
             <field name="act_window" ref="country.act_zip_form"/>
         </record>
-        <menuitem parent="ir.menu_administration" id="menu_zipcode_form" action="act_zip_form"/>
     </data>
 </tryton>
