@@ -1,3 +1,4 @@
+* BUG#6841 Modification des autorisations sur le code postal afin de donner le droit en modification/création aux utilisateurs ayant le droit de configurantion des tiers et déplacement du menu ZipCode au niveau de la configuration des tiers .
 * FEA#7191 Ajout de la séquence par défaut sur les tiers
 * BUG#6993 Suppression de l'import simplejson
 * BUG#6811 Eviter le passage en vue liste à la création d'une nouvelle adresse
