@@ -1,3 +1,5 @@
+* BUG#6841 Move ZipCode menu to party configuration.
+
 Version 1.12 - 2017-04-28
 
 Version 1.10 - 2016-11-02
